tests/spec/pass/list_index_assign_length.aja
nums = [3, 1, 2]
nums[1] = 9
print(nums)
print(length(nums))

name = "Aja"
print(length(name))

sorted_nums = sort(nums)
print(sorted_nums)
print(nums)
