tests/spec/fail/list_append_type_mismatch.aja
nums = [1]
nums.append("x")
